examples/test/testpolicy7982.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7982
  namespace: namespace395
spec:
  podSelector:
    matchLabels:
      key42: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value23
          key8: value0
          key0: value18
      podSelector:
        matchLabels:
          key12: value49
          key29: value19
